--- a/main.tex
+++ b/main.tex
@@ -96,7 +96,7 @@
   {CIPS Certification Portal}{Jan 2026 -- Present}
   {Software Developer (Capstone Project)}{Regina, SK}
 \resumeItemListStart
-  \resumeItem{Developing a certification portal using React, TypeScript, ASP.NET Core, and SQL Server (ongoing).}
+  \resumeItem{•	Developing a next-generation certification management portal in collaboration with CIPS (Canada’s Association of IT Professionals).}
   \resumeItem{Working through project phases: initiation, planning, execution, and closing; maintaining WBS, Gantt, charter, risk registry, and test logs.}
 \resumeItemListEnd
 
