Edited Finance Resume Template

--- a/fin.tex
+++ b/fin.tex
@@ -58,9 +58,9 @@
 %----------HEADING----------
 \begin{center}
     {\Large \scshape Aryan Patel} \\[2mm]
-    \faPhone\ \href{tel:+16395901400}{\underline{639-590-1400}} ~
-    \faEnvelope\ \href{mailto:aryanpatel131129@gmail.com}{\underline{aryanpatel131129@gmail.com}} ~
-    \faLinkedin\ \href{https://www.linkedin.com/in/aryan-patel-420217383/}{\underline{linkedin.com/in/aryan-patel-420217383}}
+    \faPhone\ \href{tel:+1639}{\underline{63900}} ~
+    \faEnvelope\ \href{mailto:aryanp.com}{\underline{aryanpa29@gmail.com}} ~
+    \faLinkedin\ \href{https://www.laryan-patel-420217383/}{\underline{linkedin.c0217383}}
     \vspace{-2pt}
 \end{center}
 
